[project]
name = "claude-ticket-wrangler"
version = "0.1.0"
description = "Linear + GitHub Issues + worktrunk integration for Claude Code workflows"
license = { file = "LICENSE" }
authors = [{ name = "QuickVM", email = "team@quickvm.com" }]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "rich",
    "typer",
    "pydantic",
    "pydantic-settings",
    "tomlkit",
]

[project.scripts]
ctw = "ctw.main:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctw"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
